# ali

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
output/: debug_page1.html  diag.html  dom_structure.json  kukirin_products.json  product_detail.html  product_jsdata.json
scripts/: analyze_data.py  check_desc.py  check_output.py  debug_dom.py  debug_shipto.py  diag.py  dump_html.py  scrape.py
src/ali_scraper/: __init__.py  cli.py
src/ali_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ali_scraper/captcha/: __init__.py  solver.py
src/ali_scraper/cloudflare/: __init__.py  uploader.py
src/ali_scraper/config/: __init__.py  settings.py
src/ali_scraper/database/: __init__.py  mongodb.py
src/ali_scraper/proxy/: __init__.py  manager.py
src/ali_scraper/scrapers/: __init__.py  alibaba.py
src/ali_scraper/utils/: helpers.py
